# wavervanir-platform

./: .gitignore  LICENSE  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
api/: .env.example  README.md  pyproject.toml
api/src/wavervanir_api/: __init__.py  app.py  audit.py  auth.py  config.py  db.py  plans.py  rate_limit.py
api/src/wavervanir_api/providers/: __init__.py  base.py  broker_snapshot.py  bullflow.py  demo.py  fmp.py
api/src/wavervanir_api/routes/: __init__.py  broker_snapshot.py  cbsrm.py  data.py  health.py  onboard.py  stripe.py  waitlist.py
api/src/wavervanir_api/schemas/: __init__.py  broker.py  flow.py  market.py
api/src/wavervanir_api/tools/: __init__.py  bootstrap_key.py
api/tests/: conftest.py  test_app.py  test_audit_chain.py  test_auth.py  test_bootstrap_key.py  test_broker_snapshot.py  test_no_private_imports.py  test_onboard.py  test_plans.py  test_providers.py  test_rate_limit.py  test_routes_cbsrm.py  test_stripe_webhook.py  test_waitlist.py
api/tests/fixtures/: sample_broker_snapshot.json  sample_bullflow.json
docs/: ANKIT_HANDOFF.md  ANKIT_START_HERE.md  ARCHITECTURE.md  BULLFLOW_SETUP.md  CONTRIBUTOR_WORKFLOW.md  DATA_PROVIDERS.md  DEMO_DASHBOARD.md  DEPLOY.md  FMP_SETUP.md  HANDOFF_CHECKLIST.md  LOCAL_DEMO.md  PRIVACY_BOUNDARY.md  PROJECT_BOUNDARIES.md  STAGING_VERIFICATION.md  STRIPE_SETUP.md  TASTYWORKS_SNAPSHOT_SCHEMA.md  WEBSITE_INTEGRATION.md
landing/: .env.example  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
tools/: build_handoff.ps1  build_handoff.sh
(+24 files in other folders)
