[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavervanir-api"
version = "0.1.0"
description = "Hosted CBSRM research API — public methodology, authenticated SaaS surface."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "WaverVanir International LLC" },
]
keywords = ["systemic-risk", "saas", "cbsrm", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.111",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "stripe>=8.0",
    "uvicorn[standard]>=0.29",
    "email-validator>=2.1",
    # The hosted API depends on the PUBLIC cbsrm package only.
    # In MVP we install from the pinned v0.9.0 tag on GitHub.
    # Operators developing locally can override with: pip install -e ../../cbsrm
    "cbsrm @ git+https://github.com/pravo123/cbsrm.git@v0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
